--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/selectIndicadoresTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/selectIndicadoresTrabajoSocialPlanificado.zul
@@ -9,15 +9,10 @@
 			<div sclass="row">
 				<div sclass="col s12">
 					<div class=" col s12">
-						<div class=" row line-evento"
-							style="margin:0px">
-						</div>
-					</div>
-					<div class=" col s12">
-						<div sclass="row"
-							style="margin:0px;background: #FFF">
-
+						<div sclass="row" style="margin:0px;">
 							<div sclass="col s3">
+								<n:br></n:br>
+								<n:br></n:br>
 								<n:br></n:br>
 								<n:br></n:br>
 								<div align="center"
@@ -108,11 +103,6 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class=" col s12">
-						<div class=" row line-evento"
-							style="margin:0px">
 						</div>
 					</div>
 				</div>
