--- a/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/evaluarActividades/evaluarActividadTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/ejecucion/evaluarActividades/evaluarActividadTrabajoSocialPlanificado.zul
@@ -37,14 +37,12 @@
 		<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px">
-					</div>
-				</div>
-				<div class=" col s12">
 					<div sclass="row"
-						style="margin:0px;background: #FFF">
+						style="margin:0px">
 
 						<div sclass="col s3">
+							<n:br></n:br>
+							<n:br></n:br>
 							<n:br></n:br>
 							<n:br></n:br>
 							<div align="center"
@@ -134,10 +132,6 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px">
 					</div>
 				</div>
 			</div>
