--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/selectActividadesTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/selectActividadesTrabajoSocialPlanificado.zul
@@ -8,14 +8,11 @@
 		<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px">
-					</div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
+					<div sclass="row" style="margin:0px;">
 
 						<div sclass="col s3">
+							<n:br></n:br>
+							<n:br></n:br>
 							<n:br></n:br>
 							<n:br></n:br>
 							<div align="center"
@@ -105,10 +102,6 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px">
 					</div>
 				</div>
 			</div>
