--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actualizacion/trabajoSocialPlanificadoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actualizacion/trabajoSocialPlanificadoFormBasic.zul
@@ -2,53 +2,50 @@
 <?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
 	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
-
-	<div sclass="animated fadeInLeft">
-		<div class="row detailSectionWizard">
-			<div class="row">
-				<div sclass="input-field col s11">
+	<div sclass="animated fadeInLeft"
+		use="karen.core.form.controllers.C_WindowForm"
+		apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actualizacion.viewmodels.VM_TrabajoSocialPlanificadoFormBasic')">
+		<div class="row">
+			<div sclass="row">
+				<div class="input-field col s5">
 					<n:label for="nombre" class="active">
-						Trabajo Social Seleccionado:
+						Trabajo Social:
 					</n:label>
+					<textbox id="nombre" type="text" disabled="true"
+						value="@bind(vm.tsPlan.fkTrabajoSocial.nombre)">
+					</textbox>
 				</div>
 				<div class="input-field col s1"
 					style="font-size: 2em;">
 					<button
 						sclass="teal lighten-1 waves-effect waves-light"
-						onClick="@command('buscarTrabajoSocial')" iconSclass="fa fa-edit"
+						onClick="@command('buscarTrabajoSocial')" iconSclass="fa fa-search"
 						style="padding: 5px 15px; background-color: #2AA4EF !important">
 					</button>
-				</div>
-			</div>
-			<div sclass="row">
-				<div class="input-field col s6">
-					<n:label for="nombre" class="active">
-						Nombre:
-					</n:label>
-					<label style="font-size: 16px;"
-						value="@bind(vm.tsPlan.fkTrabajoSocial.nombre)">
-					</label>
+
 				</div>
 
 				<div class="input-field col s6">
 					<n:label for="clasficador" class="active">
 						Clasificador:
 					</n:label>
-					<label style="font-size: 16px;"
+					<textbox id="clasficador" type="text"
+						disabled="true"
 						value="@bind(vm.tsPlan.fkTrabajoSocial.fkClasificadorTrabajoSocial.nombre)">
-					</label>
+					</textbox>
 				</div>
 			</div>
 			<div sclass="row"
-				style="border-bottom: 3px solid #3b85a1; padding-bottom: 15px;">
+				style="padding-bottom: 15px;">
 				<div class="input-field col s12">
 					<n:label for="decripcion_tsSocial" class="active">
 						Descripción
 					</n:label>
-					<label id="decripcion_tsSocial"
-						style="font-size: 16px;"
+					<textbox id="decripcion_tsSocial" type="text"
+						disabled="true" multiline="true" sclass="materialize-textarea"
 						value="@bind(vm.tsPlan.fkTrabajoSocial.descripcion)">
-					</label>
+					</textbox>
 				</div>
 			</div>
 
@@ -135,6 +132,10 @@
 				</div>
 
 			</div>
+		</div>
+
+		<div id="divButtonsForm"
+			use="karen.core.form.buttons.containers.DivButtonsForm">
 		</div>
 	</div>
 </zk>
