--- a/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/AsignarReconocimientoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/AsignarReconocimientoFormBasic.zul
@@ -6,6 +6,16 @@
 			
 			<div class="col s12">
 				<div class="row">
+								
+				<div class="col s12">
+					<div class="input-field offset-s2 col s8">
+							<n:label for="nombre">Reconocimiento a:</n:label>
+							<textbox id="nombre" type="text" disabled="true"
+								value="@bind(vm.persona.nombre.concat(' ').concat(vm.persona.apellido))">
+							</textbox>
+					</div>
+				</div>
+				
 					<div sclass="col s12">
 				<div class="input-field offset-s2 col s8">
 					<n:label class="active"
@@ -13,7 +23,7 @@
 						Clasificador de Reconocimiento
 					</n:label>
 					<combobox id="fk_clasificador_reconocimiento"
-						readonly="true" model="@bind(vm.clasificadorReconocimientos)"
+						readonly="true" model="@bind(vm.clasificadorPorTipoReconocimientos)"
 						selectedItem="@bind(vm.reconocimientoPersona.fkClasificadorReconocimiento)">
 						<template name="model">
 							<comboitem label="@load(each.nombre)" />
@@ -33,6 +43,14 @@
 					</div>
 				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_contenido, position=after_end"/>
 				</div>
+			</div>
+			<div class="col s12">
+					<div class="input-field offset-s2 col s8">
+								<span style="float:right" sclass="fa fa-question-circle fa-lg help-icon" 
+									tooltip="pop_imagen, position=after_end" />
+									<uploadImageSingle maxsize="9000"
+										size="200" idUpload="1" title="Imagen del Reconocimiento" />
+					</div>
 			</div>
 			
 			
