--- a/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/selectTipoReconocimiento.zul
+++ b/WebContent/views/desktop/gestion/reconocimiento/asignarReconocimiento/selectTipoReconocimiento.zul
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Rol"
+				<label value="Seleccione un Tipo de Reconocimiento"
 					sclass="label-medium-500">
 				</label>
 			</div>
