--- a/WebContent/views/desktop/gestion/trabajadores/fortalezas/listaFortalezas.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/fortalezas/listaFortalezas.zul
@@ -6,6 +6,13 @@
 			</div>
 		</div>
 		
+		<div class="input-field col s6">
+								<n:label for="nombre">Trabajador</n:label>
+								<textbox id="nombre" type="text" disabled="true"
+									value="@bind(vm.selectedObject.fkPersona.nombre.concat(' ').concat(vm.selectedObject.fkPersona.apellido))">
+								</textbox>
+		</div>
+		
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
