--- a/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajadores/trabajador/TrabajadorIndex.zul
@@ -1,4 +1,26 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
+	<style>
+
+		input { background: #FFFFFF !important; height: 17px; }
+
+		.page-content-main input[type="text"], .page-content-main
+		input[type="password"], .page-content-main input[type="email"],
+		.page-content-main input[type="url"], .page-content-main
+		input[type="time"], .page-content-main input[type="date"],
+		.page-content-main input[type="datetime-local"],
+		.page-content-main input[type="tel"], .page-content-main
+		input[type="number"], .page-content-main input[type="search"],
+		.page-content-main textarea.materialize-textarea { height: 23px;
+		font-size: 1.2em; }
+
+		.z-combobox-inplace .z-combobox-input, .z-bandbox-inplace
+		.z-bandbox-input, .z-datebox-inplace .z-datebox-input,
+		.z-timebox-inplace .z-timebox-input, .z-spinner-inplace
+		.z-spinner-input, .z-doublespinner-inplace
+		.z-doublespinner-input { border: 0; padding: 0px; }
+	</style>
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
@@ -7,22 +29,82 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox" model="@load(vm.objectsList)" 
-					selectedItem="@bind(vm.selectedObject)">
-						<listhead sizable="true">
-							<listheader width="33%" label="Cédula" />
-							<listheader width="33%" label="Trabajador" />
-							<listheader width="33%" label="Cargo" />
+					<listbox id="listbox" model="@load(vm.objectsList)"
+						selectedItem="@bind(vm.selectedObject)"
+						emptyMessage="No hay trabajadores para mostrar">				
+					<auxhead>
+							<auxheader>
+								<div>
+									<span style="margin-right: 3px;"
+										class="prefix filter fa fa-filter">
+									</span>
+									<textbox id="Cedula"
+										instant="true" placeholder="Cédula"
+										value="@bind(vm.identificacion)"
+										onChange="@command('changeFilter')"
+										style="height: 30px;font-size: 14px;margin-top: 1px;">
+									</textbox>
+								</div>
+							</auxheader>
+							<auxheader>
+								<div>
+									<span
+										class="prefix filter fa fa-filter">
+									</span>
+									<textbox id="nombre" instant="true"
+										placeholder="Trabajador" value="@bind(vm.nombre)"
+										onChange="@command('changeFilter')"
+										style="height: 30px;font-size: 14px;margin-top: 1px;">
+									</textbox>
+								</div>
+							</auxheader>
+							<auxheader>
+								<div sclass="col s6">
+									<span class="prefix filter fa fa-filter"> </span>
+									<combobox id="Cargo" placeholder="Cargos"
+										inplace="true" tooltip="Cargo" model="@bind(vm.cargos)"
+										onChange="@command('changeFilter')"
+										style="background: rgb(89, 78, 70); margin: 0px; margin-left: 6px; margin-top: 0px; display: inline;  width: 75%;"
+										selectedItem="@bind(vm.cargo)">
+										<template name="model">
+											<comboitem label="@load(each.nombre)" />
+										</template>
+									</combobox>
+								</div>
+							</auxheader>							
+							<auxheader>
+								<div sclass="col s6">
+									<span class="prefix filter fa fa-filter"> </span>
+									<combobox id="Estatus"
+										inplace="true" tooltip="Estatus" model="@bind(vm.estatusTrabajadorEnums)"
+										onChange="@command('changeFilter')"
+										style="background: rgb(89, 78, 70); margin: 0px; margin-left: 6px; margin-top: 0px; display: inline;  width: 75%;"
+										selectedItem="@bind(vm.estatusTrabajadorEnum)">
+										<template name="model">
+											<comboitem label="@load(each.toString())" />
+										</template>
+									</combobox>
+								</div>
+							</auxheader>							
+						</auxhead>
+					
+					
+						<listhead>
+							<listheader width="30%" label="Cédula" />
+							<listheader width="30%" label="Trabajador" />
+							<listheader width="30%" label="Cargo" />
+							<listheader width="20%" />
 						</listhead>
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.fkPersona.identificacion)" />
 								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								<listcell label="@load(each.fkCargo.nombre)" />
+								<listcell />
 							</listitem>
 						</template>
 						<listfoot>
-							<listfooter id="listFoot" span="3"
+							<listfooter id="listFoot" span="4"
 								use="karen.core.listfoot.ListFoot">
 							</listfooter>
 						</listfoot>
